; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_hci.c_hci_cmd_ass.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_hci.c_hci_cmd_ass.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }
%struct.pbuf = type { i64 }

@HCI_COMMAND_DATA_PACKET = common dso_local global i32 0, align 4
@HCI_CMD_HDR_LEN = common dso_local global i32 0, align 4
@hci_dev = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.pbuf* @hci_cmd_ass(%struct.pbuf* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.pbuf*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.pbuf* %0, %struct.pbuf** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* @HCI_COMMAND_DATA_PACKET, align 4
  %10 = load %struct.pbuf*, %struct.pbuf** %5, align 8
  %11 = getelementptr inbounds %struct.pbuf, %struct.pbuf* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = inttoptr i64 %12 to i32*
  %14 = getelementptr inbounds i32, i32* %13, i64 0
  store i32 %9, i32* %14, align 4
  %15 = load i32, i32* %6, align 4
  %16 = and i32 %15, 255
  %17 = load %struct.pbuf*, %struct.pbuf** %5, align 8
  %18 = getelementptr inbounds %struct.pbuf, %struct.pbuf* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = inttoptr i64 %19 to i32*
  %21 = getelementptr inbounds i32, i32* %20, i64 1
  store i32 %16, i32* %21, align 4
  %22 = load i32, i32* %6, align 4
  %23 = ashr i32 %22, 8
  %24 = load i32, i32* %7, align 4
  %25 = shl i32 %24, 2
  %26 = or i32 %23, %25
  %27 = load %struct.pbuf*, %struct.pbuf** %5, align 8
  %28 = getelementptr inbounds %struct.pbuf, %struct.pbuf* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = inttoptr i64 %29 to i32*
  %31 = getelementptr inbounds i32, i32* %30, i64 2
  store i32 %26, i32* %31, align 4
  %32 = load i32, i32* %8, align 4
  %33 = load i32, i32* @HCI_CMD_HDR_LEN, align 4
  %34 = sub nsw i32 %32, %33
  %35 = sub nsw i32 %34, 1
  %36 = load %struct.pbuf*, %struct.pbuf** %5, align 8
  %37 = getelementptr inbounds %struct.pbuf, %struct.pbuf* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = inttoptr i64 %38 to i32*
  %40 = getelementptr inbounds i32, i32* %39, i64 3
  store i32 %35, i32* %40, align 4
  %41 = load %struct.TYPE_2__*, %struct.TYPE_2__** @hci_dev, align 8
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i32 0, i32 0
  %43 = load i64, i64* %42, align 8
  %44 = icmp sgt i64 %43, 0
  br i1 %44, label %45, label %50

45:                                               ; preds = %4
  %46 = load %struct.TYPE_2__*, %struct.TYPE_2__** @hci_dev, align 8
  %47 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = add nsw i64 %48, -1
  store i64 %49, i64* %47, align 8
  br label %50

50:                                               ; preds = %45, %4
  %51 = load %struct.pbuf*, %struct.pbuf** %5, align 8
  ret %struct.pbuf* %51
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
